--- a/files/waybar/style.css
+++ b/files/waybar/style.css
@@ -6,30 +6,13 @@
 
 /* Nord */
 @define-color bg #2E3440;
-/*@define-color bg #353C4A;*/
-@define-color light #D8DEE9;
-/*@define-color dark @nord_dark_font;*/
+
 @define-color warning #ebcb8b;
 @define-color critical #BF616A;
-@define-color mode #434C5E;
-/*@define-color workspaces @bg;*/
-/*@define-color workspaces @nord_dark_font;*/
-/*@define-color workspacesfocused #434C5E;*/
 @define-color workspacesfocused #4C566A;
 @define-color tray @workspacesfocused;
-@define-color sound #EBCB8B;
-@define-color network #5D7096;
-@define-color cpu #596A8D;
-@define-color temp #4D5C78;
-@define-color layout #5e81ac;
-@define-color battery #88c0d0;
-@define-color date #434C5E;
-@define-color time #434C5E;
-@define-color backlight #434C5E;
 @define-color nord_bg #434C5E;
-@define-color nord_bg_blue #546484;
 @define-color nord_light #D8DEE9;
-@define-color nord_light_font #D8DEE9;
 @define-color nord_dark_font #434C5E;
 
 /* Reset all styles */
@@ -37,14 +20,14 @@
     border: none;
     border-radius: 3px;
     min-height: 0;
-    margin: 0.2em 0.2em 0.2em 0.2em;
+    margin: 0.15em 0.2em;
 }
 
 
 /* The whole bar */
 #waybar {
     background: @bg;
-    color: @light;
+    color: @nord_light;
     font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
     font-size: 20px;
 }
@@ -52,36 +35,16 @@
 
 
 /* Each module */
-#battery,
 #clock,
-#cpu,
-#custom-layout,
-#memory,
 #mode,
-#network,
-#pulseaudio,
-#temperature,
-#custom-alsa,
 #custom-pacman,
-#custom-weather,
-#custom-gpu,
-#tray,
-#backlight,
-#language,
-#custom-cpugovernor {
+#pulseaudio,
+#battery,
+#backlight {
     padding-left: 0.6em;
     padding-right: 0.6em;
 }
 
-/* Each module that should blink */
-#mode,
-#memory,
-#temperature,
-#battery {
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
 
 /* Each critical module */
 #memory.critical,
@@ -91,17 +54,7 @@
     color: @critical;
 }
 
-/* Each critical that should blink */
-#mode,
-#memory.critical,
-#temperature.critical,
-#battery.critical.discharging {
-    animation-name: blink-critical;
-    animation-duration: 2s;
-}
-
 /* Each warning */
-#network.disconnected,
 #memory.warning,
 #cpu.warning,
 #temperature.warning,
@@ -110,26 +63,14 @@
     color: @nord_dark_font;
 }
 
-/* Each warning that should blink */
-#battery.warning.discharging {
-    animation-name: blink-warning;
-    animation-duration: 3s;
-}
-
 /* And now modules themselves in their respective order */
 
 #mode { /* Shown current Sway mode (resize etc.) */
-    color: @light;
-    background: @mode;
+    color: @nord_light;
+    background: @nord_bg;
 }
 
 /* Workspaces stuff */
-
-#workspaces {
- /*   color: #D8DEE9;
-     margin-right: 10px;*/
-}
-
 #workspaces button {
     font-weight: bold; /* Somewhy the bar-wide setting is ignored*/
     padding: 0;
@@ -157,98 +98,41 @@
     margin-left: 40px;
     font-weight: normal;
 }
-#bluetooth {
-    background: @nord_bg_blue;
-    font-size: 1.2em;
-    font-weight: bold;
-    padding: 0 0.6em;
-}
+
+/* right module default */
+#cpu,
+#memory,
+#pulseaudio,
+#battery,
+#backlight,
+#clock,
+#tray,
 #custom-pacman {
+    color: @nord_light;
     background: @nord_bg;
 }
-#custom-scratchpad-indicator {
-    background: @nord_light;
-    color: @nord_dark_font;
-    font-weight: bold;
-    padding: 0 0.6em;
-}
+
 #idle_inhibitor {
-    background: @mode;
-    /*font-size: 1.6em;*/
-    font-weight: bold;
-    padding: 0 0.6em;
-}
-#custom-alsa {
-    background: @sound;
-}
-
-#network {
-    background: @nord_bg_blue;
-}
-
-#memory {
-    background: @nord_bg;
+    background: @bg;
+    padding: 0 0;
 }
 
 #cpu {
-    background: @nord_bg;
-    color: #D8DEE9;
+    padding-left: 0.6em;
+    padding-right: 0;
+    margin-right: 0;
+    border-radius: 0;
+
 }
-#cpu.critical {
-    color: @nord_dark_font;
-}
-#language {
-    background: @nord_bg_blue;
-    color: #D8DEE9;
-    padding: 0 0.4em;
-}
-#custom-cpugovernor {
-    background-color: @nord_light;
-    color: @nord_dark_font;
-}
-#custom-cpugovernor.perf {
-    
-}
-#temperature {
-    background-color: @nord_bg;
-    color: #D8DEE9;
-}
-#temperature.critical {
-    background:  @critical;
-}
-#custom-layout {
-    background: @layout;
+#memory {
+    padding-left: 0;
+    margin-left:0;
+    padding-right: 0.6em;
+    border-radius: 0;
 }
 
-#battery {
-    background: @nord_bg;
-}
-
-#backlight {
-    background: @nord_bg;
-}
-
-#clock {
-    background: @nord_bg;
-}
-#clock.date {
-    background: @nord_bg;
-}
-
-#clock.time {
-    background: @nord_bg;
-}
-
-#pulseaudio {
-    background: @nord_bg;
-}
-
-#pulseaudio.muted {
-    background: @nord_bg;
-}
-#pulseaudio.source-muted {
-    background: @nord_bg;
-}
 #tray {
-    background: @nord_bg;
+    padding: 0;
+    margin: 0;
+    background: @bg;
 }
