--- a/files/waybar/style.css
+++ b/files/waybar/style.css
@@ -119,7 +119,7 @@
 
 #cpu {
     padding-left: 0.6em;
-    padding-right: 0;
+    padding-right: 0.6em;
     margin-right: 0;
     border-radius: 0;
 
